--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -19,6 +19,15 @@
 %TODO: a single queue would have synchronous copy following kernel execution and synchronous SpMV if both in same queue
 %TODO: two queues allows asynchronous copy and overlap between SpMVs.
 
+
+\section{Introduction}
+
+
+
+\section{OpenCL Queues}
+\section{I/O Hub}
+\cite{Spafford2011} 
+
 In this chapter we extend the 
 
 Internal to every OpenCL application is both a Context and a Queue. The Context 
