--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-18 10:41:20 -0600 
+%% Created for Evan Bollig at 2013-11-19 00:18:11 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Spafford2011,
+	Acmid = {1964194},
+	Address = {New York, NY, USA},
+	Articleno = {11},
+	Author = {Spafford, Kyle and Meredith, Jeremy S. and Vetter, Jeffrey S.},
+	Booktitle = {Proceedings of the Fourth Workshop on General Purpose Processing on Graphics Processing Units},
+	Date-Added = {2013-11-19 06:18:04 +0000},
+	Date-Modified = {2013-11-19 06:18:09 +0000},
+	Doi = {10.1145/1964179.1964194},
+	Isbn = {978-1-4503-0569-3},
+	Keywords = {GPGPU, benchmarking, graphics processors, performance},
+	Location = {Newport Beach, California},
+	Numpages = {7},
+	Pages = {11:1--11:7},
+	Publisher = {ACM},
+	Series = {GPGPU-4},
+	Title = {Quantifying NUMA and Contention Effects in multi-GPU Systems},
+	Url = {http://doi.acm.org/10.1145/1964179.1964194},
+	Year = {2011},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1964179.1964194},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1964179.1964194}}
 
 @misc{IntelXeonPhi2013,
 	Author = {Intel},
