Looking for tsubame reference

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -41,7 +41,7 @@
 %\usepackage[section]{placeins}
 
 \input{macros/macros.tex}
-\input{macros/authnote_macros.tex}
+%\input{macros/authnote_macros.tex}
 \input{macros/misc_mac.tex}
 \input{macros/aliases.tex}
 \input{macros/table_macros.tex} 
