--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -411,7 +411,7 @@ The Xeon Phi hardware on Cascade has 60 cores, each the equivalent of a Pentium 
 
 The card has a theoretical maximum bandwidth of 320 GB/s and double precision peak performance of 1011 GFLOP/sec \cite{IntelXeonPhi2013}. The significantly higher bandwidth on the Xeon Phi leads to the expectation that the new architecture should easily outperform NVidia GPUs on SpMV. 
 
-In early 2013, Intel released a beta OpenCL driver for the Xeon Phi. In light of this we were able to repeat our ViennaCL benchmarks on the new hardware. The resulting data, presented in Figure~\ref{fig:gflops_cascade_intel_phi} \emph{should only be considered preliminary}.  The figure is provided for comparison with Figures~\ref{fig:gflops_cascade_m2070} and \ref{fig:gflops_cascade_k20}, and the most obvious issue within Figure~\ref{fig:gflops_cascade_intel_phi} is that every single test case on the Xeon Phi demonstrates substantially lower performance than on NVidia GPUs. We suspect that the low performance is due in part to the beta status of the OpenCL driver. Another concern is that the ViennaCL SpMV kernels were written for NVidia hardware and it is known that OpenCL does not guarantee performance portability. 
+In early 2013, Intel released a beta OpenCL driver for the Xeon Phi. In light of this we were able to repeat our ViennaCL benchmarks on the new hardware. The resulting data, presented in Figure~\ref{fig:gflops_cascade_intel_phi} \emph{should only be considered preliminary}.  The figure is provided for comparison with Figures~\ref{fig:gflops_cascade_m2070} and \ref{fig:gflops_cascade_k20}, and the most obvious issue within Figure~\ref{fig:gflops_cascade_intel_phi} is that every single test case on the Xeon Phi demonstrates substantially lower performance than on NVidia GPUs. While the CSR format performs moderately well on the Xeon Phi, the ELL performs 4x to 5x worse than the GPU and the COO format is as much as 10x worse. We suspect that the low performance is due in part to the beta status of the OpenCL driver. Another concern is that the ViennaCL SpMV kernels were written for NVidia hardware and it is known that OpenCL does not guarantee performance portability. 
 
 As our investigation into the Xeon Phi continues, the benchmarks will be reassessed on upcoming releases of the OpenCL drivers, and we may consider implementing a set of Xeon Phi specific kernels as another ViennaCL back-end. 
 
