--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -21,10 +21,16 @@
 
 %TODO: cuda mpi aware
 
-In this chapter we extend the 
+
+Today, high performance computing centers around the world are leveraging GPU accelerators to reach their peak performance. In fact, a number of high performance computing installations boast significantly more GPU accelerators than CPU counterparts. An example of this is the Keeneland project, which in its current Full-Scale deployment has 264 nodes, with each node containing two Intel Sandy-Bridge CPUs and 3 NVidia Fermi-class GPUs (i.e. 792 total GPUs), and a theoretical peak of 615 TFLOP/sec \cite{Vetter2011}. Other projects like TSUBAME 2.0 house up the ante to 4116 GPUs total 
+
+Our efforts in \cite{BolligFlyerErlebacher2012} and Appendix~\ref{app:keeneland_alltoallv_benchmarks} targeted the Keeneland Initial Delivery (KID) system. 
 
 
-Petascale computing centers around the world are leveraging GPU accelerators to achieve peak performance. In fact, many of today's high performance computing installations boast significantly more GPU accelerators than CPU counterparts. The Keeneland project is one such example, currently with 240 CPUs accompanied by 360 NVidia Fermi class GPUs with at least double that number expected by the end of 2012 \cite{Vetter2011}. 
+\section{Multi-GPU Computing} 
+
+Multi-GPU clusters 
+
 
 %TODO: \cite{Goeddeke2009} \cite{Erez2007}
 
@@ -168,18 +174,10 @@ Compute Nodes   &   PPN  &   n=17   &   n=31   &   n=50   &   n=101   \\ \hline
 
 \section{Conclusion and Future Work}
 
-This chapter presented the first 
+This chapter presented the first
 
 Future considerations include: 
 \begin{itemize} 
-\item 
-The two level parallelization can even be extended to three level parallelism
-with pThreads or OpenMP (see code samples attached to \cite{CudaToolkitDoc}). While OpenCL provides
-the means to target parallelism on either multi-core CPUs or many-core GPUs, it
-does not allow a parallel kernel on one hardware interact with a parallel kernel
-on the another. That is to say, an OpenCL kernel on the CPU cannot launch
-kernels on the GPU.  
-
 \item We have already leveraged the concurrent kernel execution feature on NVidia Fermi (and Kepler) class GPUs for the overlapping communication and computation algorithm when processing a single subdomain per GPU. However, it remains to be seen what benefit (if any) can be had by queueing multiple subdomains per GPU in order to fully occupy the hardware. This would be equivalent to a hierarchical domain decomposition that assigns a large problem size to each GPU that is then processed as smaller subdomains. 
 
 \item One of the problems with choosing to work in OpenCL is the fact that the standard offers the lowest common denominator of features from the various hardware vendors that support it. Many vendor specific features never make it into the standard or even vendor specific extensions.
