--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-19 00:18:11 -0600 
+%% Created for Evan Bollig at 2013-11-19 03:09:58 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{TitanGPUCluster,
+	Date-Added = {2013-11-19 09:02:57 +0000},
+	Date-Modified = {2013-11-19 09:04:24 +0000},
+	Howpublished = {\nolinkurl{http://www.olcf.ornl.gov/titan/}},
+	Month = {November},
+	Title = {Introducing Titan -- Advancing the Era of Accelerated Computing},
+	Year = {2013}}
 
 @inproceedings{Spafford2011,
 	Acmid = {1964194},
