--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-19 03:09:58 -0600 
+%% Created for Evan Bollig at 2013-11-19 04:24:42 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kim2012,
+	Author = {Ki-Hwan Kim and Q-Han Park},
+	Date-Added = {2013-11-19 10:24:38 +0000},
+	Date-Modified = {2013-11-19 10:24:42 +0000},
+	Doi = {http://dx.doi.org/10.1016/j.cpc.2012.06.003},
+	Issn = {0010-4655},
+	Journal = {Computer Physics Communications},
+	Keywords = {OpenCL},
+	Number = {11},
+	Pages = {2364 - 2369},
+	Title = {Overlapping computation and communication of three-dimensional \{FDTD\} on a \{GPU\} cluster},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0010465512002044},
+	Volume = {183},
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0010465512002044},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.cpc.2012.06.003}}
 
 @misc{TitanGPUCluster,
 	Date-Added = {2013-11-19 09:02:57 +0000},
