--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -27,7 +27,16 @@ In some cases, HPC installations like the Keeneland project \cite{Vetter2011} bo
 
 Ultimately, finding a way to harness the tera- and peta-scale performance from such clusters is a grand challenge for our work on RBF-FD and other RBF PDE methods. To this end we present the first multi-GPU implementation of RBF-FD within this chapter.
 
-In Chapter~\ref{chap:gpu_rbffd}, we have already developed two different approaches to computing RBF-FD on a single GPU. Then in Chapter~\ref{chap:distributed_rbffd}, we laid the foundation for a distributed RBF-FD that spans the nodes of an HPC cluster, and demonstrated scaling up to 1024 processors (128 nodes). This chapter combines algorithms from both of those chapters to produce the first (to our knowledge) multi-GPU implementation of the RBF-FD method. Unfortunately, due to the this is not the possible due to one problem: communication overhead. 
+In Chapter~\ref{chap:gpu_rbffd}, we have already developed two different approaches to computing RBF-FD on a single GPU. Then in Chapter~\ref{chap:distributed_rbffd}, we laid the foundation for a distributed RBF-FD that spans the nodes of an HPC cluster, and demonstrated scaling up to 1024 processors (128 nodes). This chapter combines those algorithms to produce the first (to our knowledge) multi-GPU (OpenCL) implementation of the RBF-FD method. 
+
+One issue with distributing computation across multiple GPUs is that the GPUs excel at accelerating computation, but do nothing to reduce the cost of communication. With communication latency suddenly disproportionately large compared to computation, the distributed GPU implementation loses its ability to scale well. As part of this chapter, we detail an algorithm to hide communication latency behind overlapped computation. The algorithm here is an organic extension to the overlapping communication and computation algorithm in Chapter~\ref{chap:distributed_rbffd}. 
+
+
+Naturally, a number of related investigations exist in the literature that port applications to multi-GPU clusters. \cite{KimPark2012} 
+
+
+
+due to the this is not the possible due to one problem: communication overhead. 
  
 
 
