--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -27,24 +27,19 @@ In some cases, HPC installations like the Keeneland project \cite{Vetter2011} bo
 
 Ultimately, finding a way to harness the tera- and peta-scale performance from such clusters is a grand challenge for our work on RBF-FD and other RBF PDE methods. To this end we present the first multi-GPU implementation of RBF-FD within this chapter.
 
-In Chapter~\ref{chap:gpu_rbffd}, we have already developed two different approaches to computing RBF-FD on a single GPU. Then in Chapter~\ref{chap:distributed_rbffd}, we laid the foundation for a distributed RBF-FD that spans the nodes of an HPC cluster, and demonstrated scaling up to 1024 processors (128 nodes). This chapter combines those algorithms to produce the first (to our knowledge) multi-GPU (OpenCL) implementation of the RBF-FD method. 
+In Chapter~\ref{chap:gpu_rbffd}, we have already developed two different approaches to computing RBF-FD on a single GPU: the first using custom OpenCL kernels for RK4 time-steps, and the second using ViennaCL for the same tasks. Then in Chapter~\ref{chap:distributed_rbffd}, we laid the foundation for a distributed RBF-FD that spans the nodes of an HPC cluster, and demonstrated scaling up to 1024 processors (128 nodes). This chapter combines those algorithms to produce the first (to our knowledge) multi-GPU implementation of the RBF-FD method with overlapping communication and computation. 
 
 One issue with distributing computation across multiple GPUs is that the GPUs excel at accelerating computation, but do nothing to reduce the cost of communication. With communication latency suddenly disproportionately large compared to computation, the distributed GPU implementation loses its ability to scale well. As part of this chapter, we detail an algorithm to hide communication latency behind overlapped computation. The algorithm presented herein is an organic extension to the overlapping communication and computation algorithm in Chapter~\ref{chap:distributed_rbffd}. 
 
 %With the popularity of GPU clusters, there are naturally a number of related investigations in the literature that consider overlapping communication and computation for multi-GPU applications. For example, Kim and Park overlap communication and computation in their implementation of a Finite-Difference Time-Domain algorithm and demonstrate near perfect strong scaling up to 6 GPUs \cite{KimPark2012}. \cite{Thibault2009}
 %
+%TODO: \cite{Goeddeke2009} \cite{Erez2007}
+%Similar approaches to overlapping communication and computation can be found in \cite{Schubert2011} and \cite{Thibault2009}.
+
+%Lawlor \cite{Lawlor2009} wraps a subset of MPI collectives, memory copies between GPU and CPU, and---to some extent---callbacks to GPU kernels behind a simplified API called cudaMPI. Although the concept of cudaMPI is good for minimally invasive design, the library only provides a handful of  a limited subset of MPI  a for overlapping communication and computation.  
+
 
 \section{Multi-GPU RBF-FD}
-
-Our efforts in \cite{BolligFlyerErlebacher2012} and Appendix~\ref{app:keeneland_alltoallv_benchmarks} targeted the Keeneland Initial Delivery (KID) system. 
-
-
-
-%TODO: \cite{Goeddeke2009} \cite{Erez2007}
-
-
-
-Similar approaches to overlapping communication and computation can be found in \cite{Schubert2011} and \cite{Thibault2009}.
 
 Internal to every OpenCL application is both a Context and a Queue. The Context 
 
@@ -52,10 +47,6 @@ The overlapping communication is achieved by creating additional queues
 
 
 Recent advances in distributed (multi-)GPU computing involve NVidia's GPU Direct technology. GPU Direct allows hardware like the PCI-e bus to directly access memory on the GPU device. CUDA V5.5 adds full support for MPI applications 
-
-
-
-Lawlor \cite{Lawlor2009} wraps a subset of MPI collectives, memory copies between GPU and CPU, and---to some extent---callbacks to GPU kernels behind a simplified API called cudaMPI. Although the concept of cudaMPI is good for minimally invasive design, the library only provides a handful of  a limited subset of MPI  a for overlapping communication and computation.  
 
 OpenCL does not support must be explicitly copied to the CPU 
 
@@ -101,11 +92,14 @@ Overlapping communication and GPU computation is enabled by two levels of asynch
 \end{itemize}
 
 
-\section{Performance}
+\section{Strong Scaling Performance}
 
 We now consider the performance of our multi-GPU algorithms. 
 
-In Appendix~\ref{app:keeneland_alltoallv_benchmarks}, we present scaling data for our multi-GPU implementation based on custom OpenCL kernels developed for \cite{BolligFlyerErlebacher2012}. The data was generated on the Keeneland Initial Delivery (KID) system \cite{Vetter2011}, and shows strong scaling up to 10 GPUs (1 GPU per compute node) applied to the small problem size of $N=27556$ nodes. Non-overlapping communication (\texttt{MPI\_Alltoallv}) synchronizes GPUs as they execute iterations of RK4 time-scheme. 
+
+%Our effort in \cite{BolligFlyerErlebacher2012} developed the original multi-GPU implementation of RBF-FD. 
+Appendix~\ref{app:keeneland_alltoallv_benchmarks} presents scaling data for the multi-GPU implementation based on our custom OpenCL kernels that were developed in \cite{BolligFlyerErlebacher2012}. The data was generated on the Keeneland Initial Delivery (KID) system \cite{Vetter2011}. We tested the strong scaling of RBF-FD kernels up to 10 GPUs (1 GPU per compute node) for the small problem size of $N=27556$ nodes. Non-overlapping communication (\texttt{MPI\_Alltoallv}) synchronizes GPUs as they execute iterations of the RK4 time-scheme. The benchmarks on Keeneland tested
+
 
 In Chapter~\ref{chap:gpu_rbffd} the Cascade GPU cluster was introduced. Recall that Cascade contains up to 32 NVidia M2070 GPUs, 8 NVidia K20 GPUs and 3 Intel Xeon Phis. Although Cascade is not a large GPU cluster, it does present a nice environment for testing scaling 
 
