--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -43,25 +43,36 @@ Our multi-GPU implementation leverages non-blocking MPI communication plus two a
 
 \section{Multi-GPU RBF-FD}
 
-In order to develop the multi-GPU implementation, we return to the idealized test case considered in Chapter~\ref{chap:distributed_rbffd}: four derivatives on a regular grid in 3-D are computed via SpMV and used as the intermediate vectors for an RK4 time-step. At the end of each SpMV a communication collective synchronizes external dependencies for each subdomain.
+In order to develop the multi-GPU implementation, we return to the idealized test case considered in Chapter~\ref{chap:distributed_rbffd}: four derivatives on a 3-D regular grid are computed via SpMV and used as the intermediate vectors for an RK4 time-step. At the end of each SpMV a communication collective synchronizes external dependencies for each subdomain.
 
-In this chapter, the SpMV 
-
-
+Previously, the SpMV was assumed to be on the CPU. Herein, we assume the SpMV is computed via the GPU using the algorithms presented in Chapter~\ref{chap:gpu_rbffd}. In the description of our multi-GPU algorithm the actual choice between custom OpenCL kernels and ViennaCL does not matter. However, as we proceed with benchmarking the ViennaCL implementation is assumed. 
 
 
-In Chapter~\ref{chap:distributed_rbffd} our discussion of 
+In Section~\ref{sec:local_ordering}
+
+OpenCL requires that data be explicitly copied to the CPU. The MPI collectives 
 
 
 
+\section{Overlapping Communication}
 Internal to every OpenCL application is both a Context and a Queue. The Context 
+
+~\ref{sec:index_mappings}
+
+   \begin{enumerate}
+    \item Transfer $\mathcal{O}$ from GPU to CPU
+    \item Encode $\mathcal{O}$ to send buffer
+	\item Distribute $\mathcal{O}$ to other CPUs and receive $R$ from other CPUs
+	\item Decode $\mathcal{R}$ from received buffer  
+	\item Transfer $\mathcal{R}$ to the GPU
+	\item Launch a GPU kernel to operate on $\mathcal{Q}$
+   \end{enumerate} 
 
 The overlapping communication is achieved by creating additional queues 
 
 
 Recent advances in distributed (multi-)GPU computing involve NVidia's GPU Direct technology. GPU Direct allows hardware like the PCI-e bus to directly access memory on the GPU device. CUDA V5.5 adds full support for MPI applications 
 
-OpenCL does not support must be explicitly copied to the CPU 
 
 
 \section{Multi-GPU Challenges}
